--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  json_theme: ^7.0.0+3
+  json_theme: ^11.0.0
   cupertino_icons: ^1.0.8
 
   # HTTP & Networking (REQUIRED - Dio only, never http package)
@@ -38,8 +38,8 @@ dependencies:
   pretty_dio_logger: ^1.3.1
 
   # State Management
-  flutter_riverpod: ^2.4.9
-  riverpod_annotation: ^2.3.3
+  flutter_riverpod: ^3.0.3
+  riverpod_annotation: ^3.0.3
 
   # Data Storage
   hive: ^2.2.3
@@ -54,7 +54,7 @@ dependencies:
   intl: ^0.20.2
 
   # Code Generation (REQUIRED - Freezed for all models)
-  freezed_annotation: ^2.4.1
+  freezed_annotation: ^3.1.0
   json_annotation: ^4.8.1
 
   # Supabase
@@ -70,8 +70,8 @@ dependencies:
   logger: ^2.0.2+1
   dartz: ^0.10.1
   equatable: ^2.0.5
-  connectivity_plus: ^5.0.2
-  go_router: ^13.0.0
+  connectivity_plus: ^7.0.0
+  go_router: ^17.0.0
 
 dev_dependencies:
   flutter_test:
@@ -79,11 +79,11 @@ dev_dependencies:
   flutter_lints: ^6.0.0
 
   # Code Generation
-  build_runner: ^2.4.7
-  freezed: ^2.4.6
-  json_serializable: ^6.7.1
-  riverpod_generator: ^2.3.9
-  riverpod_lint: ^2.3.7
+  build_runner: ^2.10.4
+  freezed: ^3.2.3
+  json_serializable: ^6.11.2
+  riverpod_generator: ^3.0.3
+  riverpod_lint: ^3.0.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
